--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.4.6",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "express-validator": "^6.14.2"
   }
 }
